fixed up package name.
Tue Sep 28 04:25:21 2004  Tim Janik  <timj@gtk.org>

        * configure.in: fixed up package name.

        * README: describe installation path handling of this package.

        * Makefile.am: fix include paths.

svn path=/trunk/; revision=2633

--- a/drivers/bse-alsa/Makefile.am
+++ b/drivers/bse-alsa/Makefile.am
@@ -6,7 +6,7 @@
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
 
-INCLUDES = -I$(srcdir) -I$(builddir) $(BSE_CFLAGS)
+INCLUDES = -I$(srcdir) -I$(top_builddir) $(BSE_CFLAGS)
 # we specify the logging domain here
 DEFS += $(strip -DG_LOG_DOMAIN=\"BSE-ALSA\")
 
@@ -38,5 +38,6 @@ EXTRA_HEADERS                += bsemididevice-alsa.h
 
 
 EXTRA_DIST += $(strip		\
+	${EXTRA_HEADERS}	\
 	acbeast.m4		\
 )
