renamed symbols from ssequencer to sequencer, adapted users. added io
Wed Sep 29 19:16:23 2004  Tim Janik  <timj@gtk.org>

        * bsessequencer.cc: renamed symbols from ssequencer to sequencer,
        adapted users. added io watch API:
        bse_sequencer_add_io_watch(): install poll-fds and a handler.
        bse_sequencer_remove_io_watch(): remove an io watch handler.

        * bsemididevice-oss.c: ported to use BseSequencer io watch API.

        * bsemididevice.h: added midi_decoder field to handle.

svn path=/trunk/; revision=2653

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -29,7 +29,7 @@ libbseincludedir = $(includedir)/bse
 libbse_la_LDFLAGS = $(strip \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 	-release $(LT_RELEASE) \
-	-export-dynamic \
+	-export-dynamic -no-undefined \
 )
 libbse_la_LIBADD = $(top_builddir)/sfi/libsfi.la $(BSE_LIBS) -lm
 
