provide MsgAbsorbString sequence.
Mon Oct  4 03:50:32 2004  Tim Janik  <timj@gtk.org>

        * bstrecords.idl: provide MsgAbsorbString sequence.

        * beast-gtk/bstmsgabsorb.[hc]: implemented message filter logic with
        rc-file and preferences dialog.

        * beast-gtk/dialogs/radgets-beast.xml: define message-absorb-config-box.

        * beast-gtk/bstusermessage.[hc]: adapt to new logging API. added
        details and repitition counting to mesage dialogs. added support
        for message filtering.

        * beast-gtk/bstpreferences.[hc]: integrate bst_msg_absorb_config_box().

        * beast-gtk/bstdefs.h: provide _DOMAIN, the gettext domain, alongside
        _() and N_(). this is needed for calls to dngettext().

        * beast-gtk/bstmain.c: setup logging handler for main thread.

        * beast-gtk/bstkeybindings.c: keep refcounts on static pspecs.

        * beast-gtk/gxk/gxkutils.[hc]: return the newly added GtkTreeViewColumn*
        from tree view column convenience functions.
        added gxk_expander_connect_to_widget() to hookup the neccessary code to
        control widget visibility with a GtkExpander.

        * beast-gtk/gxk/gxktexttools.[hc]: added GXK_SCROLL_TEXT_HFIXED and
        GXK_SCROLL_TEXT_VFIXED flags to affect scrolling ability.

svn path=/trunk/; revision=2676

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -46,7 +46,8 @@ beast_headers = $(strip \
 	bstrackeditor.h		bstrackitem.h	bstracktable.h		bstsequence.h	    \
 	bstsnetrouter.h		bstsplash.h	bsttrackview.h		bstsupershell.h	    \
 	bstusermessage.h	bstdial.h	bsttracksynthdialog.h	bstwaveeditor.h	    \
-	bstzoomedwindow.h	bstskinconfig.h	bsttrackrollctrl.h	bstxframe.h	    \
+	bstzoomedwindow.h	bstskinconfig.h	bstmsgabsorb.h		\
+	bsttrackrollctrl.h	bstxframe.h	\
 	bstsampleeditor.h	bstrackview.h	bsttreestores.h		bstutils.h	    \
 	bstmarshal.h bstdefs.h \
 )
@@ -66,7 +67,8 @@ beast_sources = $(strip \
 	bstrackeditor.c		bstrackitem.c	bstracktable.c		bstsequence.c	    \
 	bstsnetrouter.c		bstsplash.c	bsttrackview.c		bstsupershell.c	    \
 	bstusermessage.c	bstdial.c	bsttracksynthdialog.c	bstwaveeditor.c	    \
-	bstzoomedwindow.c	bstskinconfig.c	bsttrackrollctrl.c	bstxframe.c	    \
+	bstzoomedwindow.c	bstskinconfig.c	bstmsgabsorb.c		\
+	bsttrackrollctrl.c	bstxframe.c	\
 	bstsampleeditor.c	bstrackview.c	bsttreestores.c		bstutils.c	    \
 	$(PROFILE_SOURCE) \
 )
