don't include <math.h>. files needing math functions should include
Fri Oct  8 11:38:07 2004  Tim Janik  <timj@gtk.org>

        * bsedefs.h: don't include <math.h>. files needing math functions
        should include <bse/bsemath.h> instead.

        * bsemath.[hc]: removed BSE_EPSILON_CMP().
        moved contents from gslmath.h and gslmath.c here and changed namespace
        to bse. adapted users.

        * bseieee754.h: changed namespace to bse, adapted users.
        use signbit() if available.

        * bsemathsignal.[hc]: changed namespace to bse, adapted users.

        * gslmath.h, gslmath.c, gslsignal.h, gslsignal.c, gslieee754.h: removed.

        * gsl-fftconf.sh: include bsemath.h in generated source.

        * tests/mathtests.c: disabled ellipsis and complex root finding tests.

svn path=/trunk/; revision=2714

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -46,8 +46,8 @@ bse_public_h_sources = $(strip \
 	bseconstant.h		bseconstvalues.h	bsecontainer.h			bsecontextmerger.h \
 	bsedatapocket.h		bseeditablesample.h	bseenums.h			bsegconfig.h \
 	bseglobals.h		bseglue.h		bseitem.h			bsejanitor.h \
-	bsemain.h		bsemath.h		bseladspa.h			bsedevice.h \
-	bsemidicontroller.h	bsemididevice.h \
+	bsemain.h		bsemath.h		bsemathsignal.h			bseladspa.h \
+	bsemidicontroller.h	bsemididevice.h		bsedevice.h 			\
 	bsemididevice-null.h	bsemididevice-oss.h	bsemidievent.h			bsemidinotifier.h \
 	bsemidireceiver.h	bsemidisynth.h		bseobject.h			bsepart.h \
 	bsepcminput.h		bsepcmoutput.h		bseparam.h			bseparasite.h \
@@ -75,8 +75,8 @@ bse_c_sources = $(strip \
 	bseconstant.c		bseconstvalues.c	bsecontainer.c			bsecontextmerger.c \
 	bsedatapocket.c		bseeditablesample.c	bseenums.c			bsegconfig.c \
 	bseglobals.c		bseglue.c		bseitem.c			bsejanitor.c \
-	bsemain.c		bsemath.c		bseladspa.c			bsedevice.c \
-	bsemidicontroller.c	bsemididevice.c 	\
+	bsemain.c		bsemath.c		bsemathsignal.c			bseladspa.c \
+	bsemidicontroller.c	bsemididevice.c 	bsedevice.c 			\
 	bsemididevice-null.c	bsemididevice-oss.c	bsemidievent.c			bsemidinotifier.c \
 	bsemidireceiver.cc	bsemidisynth.c		bseobject.c			bsepart.c \
 	bsepcminput.c		bsepcmoutput.c		bseparam.c			bseparasite.c \
