--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,6 +16,7 @@ beast-gtk/bstitemseqdialog.c
 beast-gtk/bstitemview.c
 beast-gtk/bstkeybindings.c
 beast-gtk/bstmain.c
+beast-gtk/bstmsgabsorb.c
 beast-gtk/bstparam-automation.c
 beast-gtk/bstparam-choice.c
 beast-gtk/bstparam-color-spinner.c
@@ -45,8 +46,10 @@ beast-gtk/bstsnetrouter.c
 beast-gtk/bststest.c
 beast-gtk/bstsupershell.c
 beast-gtk/bsttrackrollctrl.c
+beast-gtk/bsttracksynthdialog.c
 beast-gtk/bsttrackview.c
 beast-gtk/bstusermessage.c
+beast-gtk/bstutils.c
 beast-gtk/bstwaveeditor.c
 beast-gtk/bstwaveview.c
 beast-gtk/dialogs/radgets-beast.xml
