Get rid of seperate .test files by moving the information which tests need
Wed Oct 13 18:57:17 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/featuretest.sh: Get rid of seperate .test files by
	moving the information which tests need to be performed with which
	parameters into the Makefile.

	* tests/audio/bseadder.test.reference:
	* tests/audio/bseadder.test: Removed, obsoled.

	* tests/audio/bseadder.reference: Same reference data, different name.

	* tests/audio/README: Documentation updated.

	* tools/bsefcompare.cc: Pretty-printing: added spaces between
	similarities.

svn path=/trunk/; revision=2733

--- a/slowtests/audio/Makefile.am
+++ b/slowtests/audio/Makefile.am
@@ -1,5 +1,5 @@
-FEATURE_TESTS = bseadder.test
-CLEANFILES = *.test.current *.bse.wav xgen-bp beastconf.sh
+FEATURE_TESTS = test-bseadder
+CLEANFILES = *.current *.bse.wav xgen-bp beastconf.sh featuretest.status.sh
 
 noinst_build_sources += beastconf.sh
 beastconf.sh:
@@ -14,5 +14,14 @@ beastconf.sh:
 
 all: beastconf.sh
 
-test: beastconf.sh
-	featuretest.sh $(FEATURE_TESTS)
+test: reset-summary $(FEATURE_TESTS)
+	@featuretest.sh --summary
+	@featuretest.sh --reset-summary
+
+reset-summary:
+	@featuretest.sh --reset-summary
+
+test-bseadder: beastconf.sh
+	@featuretest.sh bseadder.bse bseadder.reference \
+	               --avg-spectrum --avg-energy \
+	            -- --threshold=99.99
