For development builds, xmllint is required. Fail if its not found during
Sat Oct 16 00:41:08 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in: For development builds, xmllint is required. Fail if
	its not found during configure.

svn path=/trunk/; revision=2761

--- a/configure.in
+++ b/configure.in
@@ -541,6 +541,10 @@ if test x"$enable_devel_rules" = xyes ; then
     if test -z "$PERL" || $PERL -e 'exit !($] < 5.002)' > /dev/null ; then
 	AC_MSG_ERROR([failed to detect correct perl version (>= 5.002)])
     fi
+    AC_CHECK_PROGS(XMLLINT, xmllint)
+    if test -z "$XMLLINT" ; then
+	AC_MSG_ERROR([failed to find xmllint, which is required for development builds of beast])
+    fi
     DVLBUILD=""
     NOTDVLBUILD=#
 else
