fixed up mktime() usage by temporarily unsetting $TZ, use timgm() if
Mon Nov 15 20:10:06 2004  Tim Janik  <timj@gtk.org>

        * sfitime.c (sfi_time_from_string_err): fixed up mktime() usage by
        temporarily unsetting $TZ, use timgm() if available.

svn path=/trunk/; revision=2815

--- a/configure.in
+++ b/configure.in
@@ -157,6 +157,7 @@ AC_DEFUN(AC_SFI_REQUIREMENTS,
     AC_SUBST(SFI_LIBS)
 
     AC_CHECK_FUNCS(getpwnam_r getpwnam)
+    AC_CHECK_FUNCS(timegm)
 
     dnl --- SFI directories ---
     sfidlstdincdir=${includedir}
