--- a/drivers/bse-alsa/configure.in
+++ b/drivers/bse-alsa/configure.in
@@ -30,7 +30,7 @@ dnl# if any functions have been added, set PKG_INTERFACE_AGE to 0.
 dnl# if backwards compatibility has been broken,
 dnl# set PKG_BINARY_AGE _and_ PKG_INTERFACE_AGE to 0.
 dnl# PKG_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
-PKG_RELEASE_CANDIDATE=rc1
+PKG_RELEASE_CANDIDATE= #rc1
 
 # version number setup
 PKG_VERSION=$PKG_MAJOR_VERSION.$PKG_MINOR_VERSION.$PKG_MICRO_VERSION
