Properly integrated tests/scripts directory.
Fri Dec  3 16:56:36 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in:
	* tests/Makefile.am: Properly integrated tests/scripts directory.

svn path=/trunk/; revision=2871

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,7 +3,7 @@
 #
 ## Makefile.am for BEAST tests
 
-SUBDIRS = audio latency
+SUBDIRS = audio latency scripts
 
 CFLAGS   += $(EXTRA_CFLAGS)
 CPPFLAGS += $(EXTRA_CXXFLAGS)
