new documents, containing only block diagrams at the moment.
Fri Dec 17 15:56:43 2004  Tim Janik  <timj@gtk.org>

        * docs/architecture.texi: new documents, containing only block diagrams
        at the moment.

        * docs/beast-components.dia:
        * docs/beast-components.png: component block diagram.

        * docs/beast-progs.dia:
        * docs/beast-progs.png: prgram and library block diagram.

svn path=/trunk/; revision=2949

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -5,11 +5,17 @@ texi_docs = $(strip						\
 	quickstart.texi			plugin-devel.texi	\
 	release-notes.texi		faq.texi		\
 	sfidl.1.texi			sfidl-manual.texi	\
+	architecture.texi					\
 )
 texi_images = $(strip		\
 	module-voices.png	\
+	beast-components.png	\
+	beast-progs.png		\
 )
 EXTRA_DIST = $(strip		\
+	beast-components.dia	\
+	beast-progs.dia		\
+	module-voices.dia	\
 	bse-categories.txt	\
 	interpolation.txt	\
 	${texi_docs}		\
