--- a/slowtests/audio/Makefile.am
+++ b/slowtests/audio/Makefile.am
@@ -46,3 +46,16 @@ test-balance-right: beastconf.sh
 	@$(FEATURE_TEST_SH) balance.bse balance-right.reference \
 	               --channel=1 --avg-spectrum --avg-energy --spectrum \
 	            -- --threshold=99.99
+
+EXTRA_DIST = $(strip		\
+	balance-left.reference	\
+	balance-right.reference	\
+	bseadder.current	\
+	bsetowav.scm		\
+	balance-left.current	\
+	balance-right.current	\
+	balance.bse		\
+	bseadder.bse		\
+	bseadder.reference	\
+	featuretest.sh		\
+)
