--- a/drivers/bse-portaudio/configure.in
+++ b/drivers/bse-portaudio/configure.in
@@ -17,7 +17,7 @@ AC_PREREQ(2.57)
 AC_DIVERT_BEFORE_HELP([
 PKG_MAJOR_VERSION=0
 PKG_MINOR_VERSION=6
-PKG_MICRO_VERSION=3
+PKG_MICRO_VERSION=4
 PKG_INTERFACE_AGE=0
 PKG_BINARY_AGE=0
 ])
@@ -84,16 +84,21 @@ AC_ARG_ENABLE(devel-rules, [  --enable-devel-rules=[no/yes]   turn on developer 
 
 dnl setup DEBUG defaults
 if test "x$enable_debug" = "xyes"; then
-  DEBUG_FLAGS="-DG_ENABLE_DEBUG"
+  DEBUG_FLAGS="-g -DG_ENABLE_DEBUG"
 else if test "x$enable_debug" = "xno"; then
-  DEBUG_FLAGS="-DG_DISABLE_CHECKS -DBSE_DISABLE_CAST_CHECKS" # -DG_DISABLE_ASSERT
+  DEBUG_FLAGS="-DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS" # -DG_DISABLE_ASSERT
 else
-  DEBUG_FLAGS="-DGTK_NO_CHECK_CASTS"
+  DEBUG_FLAGS="-DG_DISABLE_CAST_CHECKS"
 fi fi
-if test "$cflags_set" = set; then
-  CFLAGS="$CFLAGS -g $DEBUG_FLAGS"
-else
+if test -z "$CFLAGS"; then
   CFLAGS="$DEBUG_FLAGS"
+else
+  CFLAGS="$CFLAGS $DEBUG_FLAGS"
+fi
+if test -z "$CXXFLAGS"; then
+  CXXFLAGS="$DEBUG_FLAGS"
+else
+  CXXFLAGS="$CXXFLAGS $DEBUG_FLAGS"
 fi
 
 dnl Foreign defaults:
@@ -107,7 +112,7 @@ dnl
 AC_DEFUN(AC_LIBBSE_CHECK,
 [
     dnl We need BSE, GLib, etc.
-    PKG_CHECK_MODULES(BSE, bse >= 0.6.3)
+    PKG_CHECK_MODULES(BSE, bse >= 0.6.4)
     AC_SUBST(BSE_CFLAGS)
     AC_SUBST(BSE_LIBS)
 
@@ -122,10 +127,15 @@ AC_DEFUN(AC_LIBBSE_CHECK,
 ])
 AC_DEFUN(AC_PORTAUDIO_CHECK,
 [
-    cflags="$CFLAGS"
-    ldflags="$LDFLAGS"
-    CFLAGS="$BSE_CFLAGS"
-    LDFLAGS="$BSE_LIBS"
+    AC_LANG_SAVE
+    AC_LANG_CPLUSPLUS
+
+    dnl --- find portaudio.h ---
+    found_portaudio=0
+    AC_CHECK_HEADERS(portaudio.h, found_portaudio=1)
+    if test $found_portaudio = 0 ; then
+        AC_MSG_ERROR([failed to detect portaudio.h, PortAudio not present?])
+    fi
 
     dnl --- check for PortAudio >= 19 ---
     AC_MSG_CHECKING([for PortAudio with version >= 19])
@@ -144,8 +154,8 @@ AC_DEFUN(AC_PORTAUDIO_CHECK,
 	AC_MSG_ERROR([PortAudioV19 is required to build this package])
     fi
     AC_SUBST(PORTAUDIO_LIBS)
-    CFLAGS="$cflags"
-    LDFLAGS="$ldflags"
+
+    AC_LANG_RESTORE
 ])
 
 # check compilers and their behaviour, setup CFLAGS
@@ -181,6 +191,7 @@ AC_PORTAUDIO_CHECK
 
 # Automake @VARIABLE@ exports.
 AC_SUBST(CFLAGS)
+AC_SUBST(CXXFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
