--- a/drivers/bse-portaudio/configure.in
+++ b/drivers/bse-portaudio/configure.in
@@ -130,7 +130,7 @@ AC_DEFUN(AC_PORTAUDIO_CHECK,
     saved_cflags="$CFLAGS"
     saved_cxxflags="$CXXFLAGS"
     saved_ldflags="$LDFLAGS"
-    CFLAGS="$CFLAGS $BSE_CFLAGS"
+    CFLAGS="$CFLAGS $BSE_CFLAGS" dnl *** automatically search for libportaudio under the BSE prefix
     CXXFLAGS="$CFLAGS $BSE_CFLAGS"
     LDFLAGS="$LDFLAGS $BSE_LIBS"
     AC_LANG_SAVE
