--- a/configure.in
+++ b/configure.in
@@ -90,16 +90,21 @@ AC_ARG_ENABLE(devel-rules, [  --enable-devel-rules=[no/yes]   turn on developer 
 
 dnl setup DEBUG defaults
 if test "x$enable_debug" = "xyes"; then
-  DEBUG_FLAGS="-DG_ENABLE_DEBUG"
+  DEBUG_FLAGS="-g -DG_ENABLE_DEBUG"
 else if test "x$enable_debug" = "xno"; then
-  DEBUG_FLAGS="-DG_DISABLE_CHECKS -DBSE_DISABLE_CAST_CHECKS" # -DG_DISABLE_ASSERT
+  DEBUG_FLAGS="-DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS" # -DG_DISABLE_ASSERT
 else
-  DEBUG_FLAGS="-DGTK_NO_CHECK_CASTS"
+  DEBUG_FLAGS="-DG_DISABLE_CAST_CHECKS"
 fi fi
-if test "$cflags_set" = set; then
-  CFLAGS="$CFLAGS -g $DEBUG_FLAGS"
-else
+if test -z "$CFLAGS"; then
   CFLAGS="$DEBUG_FLAGS"
+else
+  CFLAGS="$CFLAGS $DEBUG_FLAGS"
+fi
+if test -z "$CXXFLAGS"; then
+  CXXFLAGS="$DEBUG_FLAGS"
+else
+  CXXFLAGS="$CXXFLAGS $DEBUG_FLAGS"
 fi
 
 dnl Foreign defaults:
@@ -574,6 +579,7 @@ AC_DOC_REQUIREMENTS
 
 # Automake @VARIABLE@ exports.
 AC_SUBST(CFLAGS)
+AC_SUBST(CXXFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
