constant cleanups, removed _f and _d postfixes and superfluous casts.
Sat Dec 18 23:58:04 2004  Tim Janik  <timj@gtk.org>

        * bseconstvalues.h: constant cleanups, removed _f and _d postfixes and
        superfluous casts.

        * bseglobals.h: removed deprectaed constants. deprecated time ranges
        which are badly choosen and ADSR specific.

        * bsemathsignal.h: consolidation of signal<->frequency
        conversion macros.

        * bseutils.h: define bbuffer size.

svn path=/trunk/; revision=2977

--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -31,6 +31,7 @@ icon_list += davbassfilter.png
 icon_list += drum.png
 icon_list += eguitar.png
 icon_list += filter.png
+icon_list += moog.png
 icon_list += noise.png
 icon_list += organ.png
 icon_list += prod.png
