--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -37,6 +37,7 @@ icon_list += organ.png
 icon_list += prod.png
 icon_list += reverb.png
 icon_list += sample+hold.png
+icon_list += saturate.png
 icon_list += sequencer.png
 icon_list += strings.png
 icon_list += sub.png
